--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "eslint src",
     "test": "mocha -r babel-register test/**/*.spec.js",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "docs": "node server.js",
+    "docs-dist": "webpack --progress --color -p --config webpack.prod.config.js"
   },
   "repository": {
     "url": "https://github.com/heshihao0813/react-triangle-frame",
@@ -31,6 +33,9 @@
     "eslint": "^3.8.1",
     "eslint-plugin-react": "^6.4.1",
     "mocha": "^3.1.2",
-    "react-addons-test-utils": "^15.3.2"
+    "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
